# sugarcane-esg-risk-analysis

./: .gitignore  COPERNICUS_INTEGRATION_README.md  NASA_DASHBOARD_ENHANCEMENTS.md  NASA_POWER_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_NASA_DASHBOARD.md  README.md  app.py  brazil_adm2_mapping.py  config.py  cross_validation_demo.py  geonames.json  monte-carlo-risk.py  monte_carlo_integrated.py  pyproject.toml  risk_analysis_engine.py  risk_data_collector.py  risk_data_collector.py.backup  sugarcane.py  temp_copernicus.txt  test_copernicus_integration.py  utils.py
docs/: DATA_SOURCES.md  FUTURE_ENHANCEMENTS.md  IMPLEMENTATION_SUMMARY.md  INTERPRETATION_GUIDE.md  METHODOLOGY.md  SCIENTIFIC_BASIS.md
