[project]
name = "risk-test"
version = "0.1.0"
description = "Sugarcane risk analysis scripts"
authors = [
    {name = "Tito Barros Sala",email = "titobsala@exo-team.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "streamlit (>=1.30.0,<2.0.0)",
    "plotly (>=5.18.0,<6.0.0)",
    "scipy (>=1.11.0,<2.0.0)",
    "folium (>=0.15.0,<1.0.0)",
    "streamlit-folium (>=0.15.0,<1.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
